# test-analise

./: .gitignore  README.md
.github/workflows/: app-deploy.yml  infra-apply.yml
app/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml
app/config/cities/: _template_city.yaml  londrina.yaml
app/scripts/: entrypoint.sh
app/src/agents/: orchestrator.py
app/src/api/: main.py
app/src/cli/: __main__.py
app/src/common/: arcgis.py  cnes.py  db.py  ibge.py  osm.py  search_providers.py  tools.py  utils.py
app/src/pipelines/: ibge_setores_pipeline.py  mobilidade_planmob_pipeline.py  saude_pipeline.py  zoneamento_pipeline.py
infra/terraform/: main.tf  providers.tf  terraform.tfvars.example  variables.tf
